[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/bullet.png" type="Texture" id=1]
[ext_resource path="res://src/Bullet/Bullet.gd" type="Script" id=2]

[sub_resource type="CapsuleShape2D" id=1]
radius = 32.5202
height = 0.0

[sub_resource type="Animation" id=2]
resource_name = "Despawn"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=3]
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1e-05, 1e-05 ), Vector2( 1, 1 ) ]
}

[node name="Bullet" type="Area2D" groups=[
"bullets",
"objects",
]]
monitoring = false
collision_layer = 0
collision_mask = 8
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
rotation = -0.785398
scale = Vector2( 1e-05, 1e-05 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -2.85367, 0.198425 )
rotation = 1.5708
shape = SubResource( 1 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( -1.42109e-14, -1.77636e-15 )
scale = Vector2( 4.3904, 4.37592 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "Spawn"
anims/Despawn = SubResource( 2 )
anims/Spawn = SubResource( 3 )

[connection signal="area_entered" from="." to="." method="_on_Bullet_area_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
